--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Vinyls"
         tools:targetApi="31">
         <activity
-            android:name=".CollectorActivity"
+            android:name=".view.CollectorDetailActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
